# oxidized-neural-orchestra

./: .dockerignore  .gitignore  Cargo.toml  PR_EARLY_STOPPING.md  README.md  compose.yml  dev.sh  download_mnist  example.py  ids.md  mnist_benchmark  model.safetensors  orchestrator_up.sh  pr.md  pyproject.toml  run_docker.sh  run_orchestra.sh  rust.yml  strategy-switch.md
comms/: Cargo.toml
comms/src/: align.rs  deserialize.rs  deserializer.rs  lib.rs  msg.rs  proto.rs  protocol.rs  receiver.rs  sender.rs  serialize.rs  serializer.rs  sink.rs  source.rs  sparse.rs  utils.rs
comms/src/acceptors/: parameter_server.rs
comms/src/clusters/: mod.rs  parameter_server.rs
comms/src/codec/: mod.rs  sink.rs  source.rs
comms/src/connection/: acceptor.rs  connector.rs  mod.rs
comms/src/floats/: float01.rs  float_non_negative.rs  float_positive.rs  mod.rs
comms/src/handles/: compressor.rs  dataset_source.rs  mod.rs  node.rs  orchestrator.rs  parameter_server.rs  worker.rs
comms/src/protocol/: mod.rs  msg.rs
comms/src/protocol/specs/: machine_learning.rs  mod.rs  node.rs  server.rs  worker.rs
comms/src/serialization/: deserialize.rs  mod.rs  serialize.rs
comms/src/share_dataset/: mod.rs  recv_dataset.rs  send_dataset.rs  test.rs  tests.rs
comms/src/sparse/: float01.rs  mod.rs  protocol.rs  tests.rs
comms/src/specs/: algorithm.rs  machine_learning.rs  mod.rs  server.rs  strategy.rs  worker.rs
comms/src/specs/machine_learning/: dataset.rs  mod.rs  send_dataset.rs
comms/src/specs/worker/: algorithm.rs  mod.rs  model.rs  training.rs
comms/src/transport/: framer.rs  io_swapable.rs  layer.rs  mod.rs  recon.rs  retryer.rs  timeouter.rs  utils.rs
comms/tests/: integration.rs  sparse.rs
node/: Cargo.toml  Dockerfile
node/src/: main.rs  router.rs  stat_service.rs
orchestra-py/: Cargo.toml  Dockerfile  README.md  example.py  local.py  pyproject.toml  run.sh  train.py
orchestra-py/orchestra/: __init__.py  activations.py  arch.py  datasets.py  initialization.py  loss_fns.py  optimizers.py  serializer.py  store.py  sync.py
orchestra-py/src/: activations.rs  arch.rs  convert.rs  datasets.rs  initialization.rs  lib.rs  loss_fns.rs  optimizers.rs  serializer.rs  session.rs  store.rs  sync.rs  training.rs
orchestrator/: Cargo.toml  Dockerfile
orchestrator/.antigravitycli/: 5f65375a-09e5-4e20-baa3-86202df56953.json
orchestrator/src/: algorithms.rs  dataset_format.rs  error.rs  lib.rs  main.rs  session.rs  trained_model.rs
orchestrator/src/calculator/: bipartite.rs  graph.rs  mod.rs  node_calculator.rs  tsp.rs
orchestrator/src/configs/: adapter.rs  mod.rs  model.rs  partition.rs  stat_requester.rs  training.rs  validator.rs
orchestrator/src/sessions/: cancel_handle.rs  convergence_tracker.rs  event.rs  event_listener.rs  greater_than_one_usize.rs  loss_recorder.rs  mod.rs  session.rs  switch_tracker.rs  trained_model.rs  worker_listener.rs
orchestrator/src/sessions/training_strategies/: mod.rs  parameter_server.rs  strategy.rs
parameter_server/: Cargo.toml  Dockerfile  README.md
parameter_server/src/: lib.rs  main.rs  server.rs  test.rs
parameter_server/src/execution/: ensemble.rs  executor.rs  mod.rs  soloist.rs
parameter_server/src/initialization/: chained.rs  constant.rs  error.rs  mod.rs  param_gen.rs  random.rs  weight_gen.rs
parameter_server/src/optimization/: adam.rs  gradient_descent.rs  gradient_descent_with_momentum.rs  optimizer.rs
parameter_server/src/parameters/: engine.rs  handle.rs  mod.rs  shard.rs  store.rs
parameter_server/src/parameters/optimization/: adam.rs  gradient_descent.rs  gradient_descent_with_momentum.rs  mod.rs  optimizer.rs
parameter_server/src/parameters/weight_gen/: chain.rs  chained.rs  constant.rs  mod.rs  random.rs  weight_gen.rs
parameter_server/src/server/: mod.rs  server.rs
parameter_server/src/service/: builder.rs  mod.rs  pserver.rs  server.rs  specs.rs
parameter_server/src/sessions/: builder.rs  mod.rs  session.rs
parameter_server/src/sessions/specs/: mod.rs  optimizer.rs  server.rs  trainer.rs  weight_gen.rs
parameter_server/src/storage/: error.rs  handle.rs  mod.rs  shard.rs  store.rs
parameter_server/src/storage/blocking/: mod.rs  shard.rs  store.rs
parameter_server/src/storage/wild/: mod.rs  shard.rs  (+1 more)
parameter_server/src/synchronization/: barrier.rs  dyn_barrier.rs  mod.rs  non_blocking.rs  synchronizer.rs
parameter_server/src/training/: barrier_sync.rs  executor.rs  mod.rs  non_blocking.rs  trainer.rs
worker/: Cargo.toml  Dockerfile
worker/src/: acceptor.rs  algorithm.rs  bootstrap.rs  builder.rs  config.rs  error.rs  lib.rs  loop_.rs  main.rs  metrics.rs  middleware.rs  mod.rs  model.rs  optimizer.rs  schedule.rs  state.rs  strategy.rs  worker.rs
worker/src/cluster_managers/: mod.rs  server.rs
worker/src/data/: dataloader.rs  dataset.rs  mod.rs  shard.rs
worker/src/middleware/: metadata.rs  mod.rs  ps.rs  ring.rs
worker/src/middlewares/: all_reduce.rs  mod.rs  parameter_server.rs  server_cluster.rs  worker_ring.rs
worker/src/model/: layout.rs  mod.rs  ops.rs  spec.rs  view.rs
worker/src/net/: client.rs  mod.rs
worker/src/runtime/: mod.rs  ps.rs  ring.rs
worker/src/server_manager/: metadata.rs  mod.rs
worker/src/train/: mod.rs  strategies.rs
worker/src/workers/: all_reduce.rs  mod.rs  parameter_server.rs  worker.rs
worker/tests/: boundary.rs  e2e.rs  worker_loop.rs  worker_protocol.rs
(+256 files in other folders)
