[workspace]
[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
orchestrator = { path = "../orchestrator" }
env_logger = "0.11"
open = "5"members = ["comms", "parameter_server", "worker", "machine_learning", "orchestrator", "orchestui", "orchestra-py"]
resolver = "2"