[package]
name = "comms"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
half = { version = "2.4", features = ["bytemuck"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
trait-variant = "0.1.2"
