[package]
name = "comms"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
futures = "0.3.32"
half = { version = "2.4", features = ["bytemuck"] }
log = "0.4.33"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
trait-variant = "0.1.2"
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[lints]
workspace = true
