[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { path = "../comms" }
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["kv"] }
machine_learning = { path = "../machine_learning" }
parameter_server = { path = "../parameter_server" }
worker = { path = "../worker" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
  "sync",
] }
futures = "0.3.32"
uuid = { version = "1.23.3", features = ["v4"] }

[lints]
workspace = true
