[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { path = "../comms" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.32"
bytemuck = "1.24.0"
