[package]
name = "parameter_server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
comms = { version = "0.1.0", path = "../comms" }
env_logger = "0.11.8"
log = "0.4.29"
parking_lot = "0.12.5"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
trait-variant = "0.1.2"
