[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { path = "../comms" }
env_logger = "0.11.8"
futures = "0.3.32"
log = { version = "0.4.29", features = ["kv"] }
machine_learning = { path = "../machine_learning" }
rand = "0.9.2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
] }

[dev-dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "io-util",
] }
