[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { path = "../comms" }
env_logger = "0.11.8"
futures = "0.3.31"
log = { version = "0.4.29", features = ["kv"] }
machine_learning = { path = "../machine_learning" }
tokio = { version = "1.48.0", features = [
  "full",
  "net",
  "signal",
] }

[dev-dependencies]
rand = "0.9.2"